syntax = "proto3";
package glodnet.chain.identity;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "chain/identity/params.proto";
import "chain/identity/identity.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/goldnet/chain/x/identity/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/glodnet/chain/identity/params";
  }
  // Queries a Identity by index.
	rpc Identity(QueryGetIdentityRequest) returns (QueryGetIdentityResponse) {
		option (google.api.http).get = "/glodnet/chain/identity/identity/{address}";
	}

	// Queries a list of Identity items.
	rpc IdentityAll(QueryAllIdentityRequest) returns (QueryAllIdentityResponse) {
		option (google.api.http).get = "/glodnet/chain/identity/identity";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetIdentityRequest {
	  string address = 1;

}

message QueryGetIdentityResponse {
	Identity identity = 1 [(gogoproto.nullable) = false];
}

message QueryAllIdentityRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllIdentityResponse {
	repeated Identity identity = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
